--- a/pipeline_config.yaml
+++ b/pipeline_config.yaml
@@ -11,18 +11,18 @@ stages:
   - name: basic_stage
     operators:
       - name: image_metadata_refiner
-      - name: technical_quality_refiner # Auto-uses Rust if available (3-10x faster), falls back to Python
-      - name: quality_filter
+      - name: image_technical_quality_refiner # Auto-uses Rust if available (3-10x faster), falls back to Python
+      - name: image_quality_filter
         params:
           min_width: 128
           min_height: 128
           max_compression_artifacts: 0.8
           min_information_entropy: 0.0
-      - name: phash_deduplicator
+      - name: image_phash_deduplicator
     worker:
       num_replicas: 2 # Reduced from 4 to 2 to free up CPUs for embedding_stage
       resources:
-        cpu: 1 # Number of CPUs per worker instance
+        cpu: 0.2 # Number of CPUs per worker instance
 
   # - name: model_stage
   #   operators:
@@ -51,7 +51,18 @@ stages:
     worker:
       num_replicas: 1 # Single worker for GPU stage (avoid GPU contention)
       resources:
-        cpu: 2 # More CPUs for preprocessing threads
+        cpu: 1 # More CPUs for preprocessing threads
+        gpu: 0 # Set to 1 if using CUDA GPU
+
+  - name: visual_degradation_scoring_stage
+    operators:
+      - name: image_visual_degradations_refiner
+        params:
+          model_path: models/quality_assessment/multihead_quality_model.pth
+    worker:
+      num_replicas: 1 # Single worker for GPU stage (avoid GPU contention)
+      resources:
+        cpu: 1 # More CPUs for preprocessing threads
         gpu: 0 # Set to 1 if using CUDA GPU
 
 data_writer:
