--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,8 @@ dependencies = [
     "scikit-learn>=1.3.0",
     "joblib>=1.3.0",
     "open-clip-torch>=3.2.0",
+    "huggingface-hub>=0.20.0",
+    "safetensors>=0.4.0",
 ]
 
 [project.optional-dependencies]
@@ -48,8 +50,8 @@ select = [
     "DTZ", # flake8-datetimez
 ]
 ignore = [
-    "E501",  # line too long (handled by formatter)
-    "B008",  # do not perform function calls in argument defaults
+    "E501", # line too long (handled by formatter)
+    "B008", # do not perform function calls in argument defaults
 ]
 
 [tool.ruff.lint.isort]
