refactor(metrics): improve metrics aggregation and migrate reporter to Jinja2 templates
- Fix metrics aggregation logic for serial stage/operator execution
  - Stage input = first operator's input, output = last operator's output
  - Properly sum across workers within each operator
  - Preserve operator execution order by timestamp

- Migrate HTML report generation to Jinja2 templates
  - Add template directory and report.html.jinja2 template
  - Create custom format_metric filter for consistent value formatting
  - Refactor chart generation to return HTML directly

- Enhance visualizations
  - Add dual-level funnel chart (stage + operator)
  - Improve Sankey diagram with filter nodes and explicit positioning
  - Convert latency to milliseconds in scatter plot with log scales
  - Add operator-level aggregation in detailed tables

- Fix file naming consistency in metrics writer/reporter
  - Remove duplicate "run_" prefix from parquet filenames

- Update dependencies
  - Add jinja2>=3.1.0 as core dependency
  - Add plotly>=5.24.0 as optional viz dependency

- Update example configs with phash deduplicator and adjusted worker counts

--- a/configs/example_with_metrics.yaml
+++ b/configs/example_with_metrics.yaml
@@ -14,13 +14,14 @@ stages:
   - name: basic_stage
     operators:
       - name: image_metadata_refiner
-      - name: image_technical_quality_refiner  # Rust-accelerated
+      - name: image_technical_quality_refiner
       - name: image_quality_filter
         params:
           min_width: 128
           min_height: 128
           max_compression_artifacts: 0.8
           min_information_entropy: 0.0
+      - name: image_phash_deduplicator
     worker:
       num_replicas: 2
       resources:
