--- a/pyproject.toml
+++ b/pyproject.toml
@@ -53,6 +53,7 @@ dependencies = [
     "safetensors>=0.4.0",
     "transformers>=4.57.6",
     "fsspec>=2025.10.0",
+    "jinja2>=3.1.0",
 ]
 
 [project.optional-dependencies]
@@ -65,6 +66,9 @@ ml = [
     "torch>=2.0.0",            # PyTorch for deep learning models
     "torchvision>=0.15.0",     # Torchvision for image processing
     "open-clip-torch>=2.20.0", # OpenCLIP for image embeddings
+]
+viz = [
+    "plotly>=5.24.0", # For interactive HTML visualizations in metrics reports
 ]
 
 [project.urls]
