feat(loader): add distributed data loading with DataLoaderWorker actors
- Add DataLoaderWorker Ray actor for parallel data loading across shards
- Add CommonCrawl loader for web-scale data ingestion
- Refactor HuggingFaceDataLoader to support distributed loading pattern
- Update executor to orchestrate loader workers with configurable num_workers
- Add dynamic worker scaling support in config
- Add test files for distributed loading and CommonCrawl loader

--- a/configs/example_with_metrics.yaml
+++ b/configs/example_with_metrics.yaml
@@ -7,6 +7,8 @@ data_loader:
     dataset_name: "jp1924/Laion400m-1"
     split: "train"
     streaming: true
+  num_workers: 8  # Distributed loading workers
+  checkpoint_interval: 1000
 
 # Processing stages
 stages:
