--- a/pyproject.toml
+++ b/pyproject.toml
@@ -54,6 +54,8 @@ dependencies = [
     "transformers>=4.57.6",
     "fsspec>=2025.10.0",
     "jinja2>=3.1.0",
+    "warcio>=1.7.5",
+    "trafilatura>=2.0.0",
 ]
 
 [project.optional-dependencies]
