fix(text-ops): handle panics in HTML text extraction for malformed UTF-8
Add panic::catch_unwind wrapper around dom_smoothie readability parsing
to gracefully handle panics caused by malformed HTML or invalid UTF-8
boundary slicing with non-ASCII characters (e.g., Japanese text).

Changes:
- Wrap html_extract_text_core in AssertUnwindSafe catch_unwind
- Add try/except in Python CommonCrawlLoader for extraction errors
- Add comprehensive tests for Japanese HTML and UTF-8 edge cases
- Increase max_samples config to 10M for larger processing runs

--- a/configs/example_commoncrawl.yaml
+++ b/configs/example_commoncrawl.yaml
@@ -30,7 +30,7 @@ data_writer:
     output_path: "./output/commoncrawl"
 
 executor:
-  max_samples: 100000
+  max_samples: 10000000
   batch_size: 200
   dedup_num_buckets: 4
   rejected_samples:
